# server/src/interfaces/user.ts
@@ -8,7 +8,9 @@ export interface IUser {
   avatar?: string;
   isEmailVerified: boolean;
   role: string;
-  reset_password_token: string
+  status: string;
+  reset_password_token: string;
+  confirmationCode: string;
 }
 
 export enum roles {
@@ -16,7 +18,10 @@ export enum roles {
   admin = "admin"
 }
 
-
+export enum status {
+  active = "active",
+  inactive = "inactive"
+}
 export interface CreatedUser extends IUser {
   _id: Schema.Types.ObjectId;
 }
