# server/src/routes/auth/index.ts
@@ -2,6 +2,7 @@ import { NextFunction, Request, Response, Router } from "express";
 import authController from "../../controllers/auth";
 import { multerUpload } from "../../utils/multer";
 import { cloudinaryInstance } from "../../utils/cloudinary";
+import User from "../../models/user";
 
 class Auth {
   private rout = Router();
@@ -33,20 +34,29 @@ class Auth {
 
     this.rout.post("/registration", multerUpload.single('avatar'), async (req: Request, res: Response, next: NextFunction) => {
       try {
-        const localFilePath = req.file?.path || "";
         let data = req.body;
-        const { isSuccess, message, imageURL } = await cloudinaryInstance.uploadImage(localFilePath);
-        console.log("messgae", message);
-        if (isSuccess) {
-          data.avatar = imageURL;
+        const u = await User.findOne({ email: data.email });
+        if (u) {
+          throw new Error("User with this email is exist!");
         };
-
-        const result = await this.controller.registration(data);
-
+        const localFilePath = req.file?.path || "";
+        
+        const result = await this.controller.registration(data, localFilePath);
+        
         res.status(200).json(result);
       } catch (error) {
         console.log(error);
         res.status(400).json({ message: error instanceof Error ? error.message : "Server Error" });
+      }
+    })
+
+    this.rout.get("/confirm/:confirmationCode", async (req: Request, res: Response, next: NextFunction) => {
+      try {
+        let confirmationCode = req.params.confirmationCode;
+        let u = this.controller.verifyUser(confirmationCode);
+        res.status(200).json({ message: "Verified user", user: u });
+      } catch (error) {
+        res.status(404).json({ message: "Verify failed." });
       }
     })
   };
